--- a/src/app/signupform/signupform.page.html
+++ b/src/app/signupform/signupform.page.html
@@ -1,18 +1,17 @@
 <ion-header>
   <ion-toolbar  >
-    <ion-title>Aadit Life Signup Form</ion-title>
+    <ion-title light>Aadit Life Signup Form</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding-horizantal>
+    <div class="container">
     
     <form (ngSubmit)="onSubmit(myForm.value)" [formGroup]="myForm">
         
-        <ion-item-group>   
-            <ion-item>
-                <ion-label  floating>First Name</ion-label>
-                <ion-input type="text" formControlName="firstname" name="entry.238150607" required ></ion-input>
-            </ion-item>
+        <!-- <ion-item-group>    -->
+            <label for="firstname" >First Name</label>
+            <input type="text" formControlName="firstname" placeholder="your firstname" required >
             <div class="validation-errors">
                 <ng-container *ngFor="let validation of validation_messages.firstname" >
                 <div class="error-message" *ngIf="myForm.get('firstname').hasError(validation.type) && (myForm.get('firstname').touched)">
@@ -22,10 +21,8 @@
             </div>
 
 
-            <ion-item>
-                <ion-label  floating>Last Name</ion-label>
-                <ion-input type="text" formControlName="lastname" name="entry.238150608" required ></ion-input>
-            </ion-item>
+            <label  floating>Last Name</label>
+            <input type="text" formControlName="lastname" placeholder="your lastname" required >
             <div class="validation-errors">
                 <ng-container *ngFor="let validation of validation_messages.lastname" >
                 <div class="error-message" *ngIf="myForm.get('lastname').hasError(validation.type) && (myForm.get('lastname').touched)">
@@ -36,10 +33,8 @@
             
 
 
-            <ion-item >
-                <ion-label floating>Email Address</ion-label>
-                <ion-input  type="email" readonly formControlName="email" name="entry.1071171226" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required ></ion-input>
-            </ion-item>      
+            <label floating>Email Address</label>
+            <input type="email" readonly formControlName="email" placeholder="your mail id" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required >
             <div class="validation-errors">
                 <ng-container *ngFor="let validation of validation_messages.email" >
                 <div class="error-message" *ngIf="myForm.get('email').hasError(validation.type) && (myForm.get('email').touched)">
@@ -49,10 +44,8 @@
             </div>  
 
         
-            <ion-item>
-                <ion-label  floating>Organization</ion-label>
-                <ion-input type="text" formControlName="organization"  name="entry.548802180"  required >`{{organization}}`</ion-input>
-            </ion-item>    
+            <label  floating>Organization</label>
+            <input type="text" formControlName="organization" placeholder="Your Orhanization name" required >
             <div class="validation-errors">
                 <ng-container *ngFor="let validation of validation_messages.organization" >
                 <div class="error-message" *ngIf="myForm.get('organization').hasError(validation.type) && (myForm.get('organization').touched)">
@@ -60,12 +53,10 @@
                 </div>
                 </ng-container>
             </div>  
-
         
-            <ion-item>
-                <ion-label  floating>Mobile Number</ion-label>
-                <ion-input type="tel" formControlName="contact" name="entry.1334960025"  required ></ion-input>
-            </ion-item>
+            
+            <label  floating>Mobile Number</label>
+            <input type="tel" formControlName="contact" placeholder="your mobile number" required >
             <div class="validation-errors">
                 <ng-container *ngFor="let validation of validation_messages.contact" >
                 <div class="error-message" *ngIf="myForm.get('contact').hasError(validation.type) && (myForm.get('contact').touched)">
@@ -74,19 +65,16 @@
                 </ng-container>
             </div>
 
-            <ion-item-group >
-            <ion-label padding floating text-wrap>Gender</ion-label>
-            <!-- <ion-row> -->
+
+            <label padding floating text-wrap>Gender</label>
             <ion-col col-4 no-padding class="one">
             <ion-item lines="none">
                 <ion-label >Male</ion-label>
                 <ion-radio [checked]="this.gender === 'Male'" formControlName ="gender"  required value="Male" (ionSelect)="selectGender('Male')"></ion-radio>
             </ion-item>
             </ion-col>
-            <!-- </ion-row> -->
-            <!-- <ion-row> -->
             <ion-col col-5 no-padding class="two">
-            <ion-item >
+            <ion-item lines="none">
                 <ion-label  >Female</ion-label>
                 <ion-radio [checked]="this.gender === 'Female'" formControlName ="gender"  required value="Female" (ionSelect)="selectGender('Female')"></ion-radio>
             </ion-item>
@@ -98,14 +86,10 @@
                 </div>
                 </ng-container>
             </div>
-            <!-- </ion-row> -->
-       </ion-item-group>
+
             
-        
-            <ion-item lines="full">
-                <ion-label  floating>Birth Year(YYYY Format)</ion-label>
-                <ion-input formControlName="year" name="entry.1058758422" value min= "1940" max="2010" required ></ion-input>
-            </ion-item>
+            <label  floating>Birth Year(YYYY)</label>
+            <input type="number" formControlName="year" min= "1940" max="2010" placeholder="your birth year" required >
             <div class="validation-errors">
                 <ng-container *ngFor="let validation of validation_messages.year" >
                 <div class="error-message" *ngIf="myForm.get('year').hasError(validation.type) && (myForm.get('year').touched)">
@@ -114,8 +98,7 @@
                 </ng-container>
             </div>
             
-            <ion-item lines="none"></ion-item>
-        </ion-item-group>
+        <!-- </ion-item-group> -->
 
             
         <ion-button [disabled]="!myForm.valid" type="submit" >Submit</ion-button>
@@ -123,6 +106,6 @@
         
     </form>
 
-
+</div>
 
 </ion-content>
