--- a/src/app/foodlog/foodlog.page.html
+++ b/src/app/foodlog/foodlog.page.html
@@ -22,7 +22,7 @@
      
   <div>
     <ion-label>Date</ion-label>
-    <ion-datetime formControlName="date" display-format="DD/MMMM/YYYY " picker-format="DD MMMM YYYY"  [(ngModel)]="myDate"placeholder="Select a Date"></ion-datetime>
+    <ion-datetime formControlName="date" display-format="DD/MM/YYYY " picker-format="DD MMMM YYYY" [(ngModel)]="myDate" placeholder="Select a Date"></ion-datetime>
   </div>
 
   <label  floating>Meal Time</label> 
