--- a/src/app/workout/workout.page.html
+++ b/src/app/workout/workout.page.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="hide" id = "container">
-	<table>
+	<table class="table table-responsive table-striped">
 		<thead>
 			<!-- <tr>
 				<th>Column 1</th>
