--- a/src/app/workout/workout.page.scss
+++ b/src/app/workout/workout.page.scss
@@ -15,54 +15,54 @@ select {
     display: none;
   }
 
-table {
+// table {
    
-	width: 100%;
-	border-collapse: collapse;
-	overflow: hidden;
-	box-shadow: 0 0 20px rgba(0,0,0,0.1);
-}
+// 	width: 100%;
+// 	border-collapse: collapse;
+// 	overflow: hidden;
+// 	box-shadow: 0 0 20px rgba(0,0,0,0.1);
+// }
 
-th,
-td {
-	padding: 15px;
-	border: 0.1em solid;
-	background-color: rgba(255,255,255,0.2);
-	// color: #fff;
-}
+// th,
+// td {
+// 	padding: 15px;
+// 	border: 0.1em solid;
+// 	// background-color: rgba(255,255,255,0.2);
+// 	// color: #fff;
+// }
 
-th {
-	text-align: left;
-}
+// th {
+// 	text-align: left;
+// }
 
-thead {
-	th {
-		background-color: #55608f;
-	}
-}
+// thead {
+// 	th {
+// 		// background-color: #55608f;
+// 	}
+// }
 
-tbody {
-	tr {
-		&:hover {
-			background-color: rgba(255,255,255,0.3);
-		}
-	}
-	td {
-		position: relative;
-		&:hover {
-			&:before {
-				content: "";
-				position: absolute;
-				left: 0;
-				right: 0;
-				top: -9999px;
-				bottom: -9999px;
-				background-color: rgba(255,255,255,0.2);
-				z-index: -1;
-			}
-		}
-	}
-}
+// tbody {
+// 	tr {
+// 		&:hover {
+// 			background-color: rgba(255,255,255,0.3);
+// 		}
+// 	}
+// 	td {
+// 		position: relative;
+// 		&:hover {
+// 			&:before {
+// 				content: "";
+// 				position: absolute;
+// 				left: 0;
+// 				right: 0;
+// 				top: -9999px;
+// 				bottom: -9999px;
+// 				background-color: rgba(255,255,255,0.2);
+// 				z-index: -1;
+// 			}
+// 		}
+// 	}
+// }
 
 .logbutton {
 	display: flex;
