--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -44,4 +44,10 @@
       <div id="container4" ></div>
     </ion-card-content>
   </ion-card>
+
+  <ion-card>
+    <ion-card-content>
+      <div id="container5" ></div>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
