--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
     <ion-menu  menu-id="menu2" swipe-gesture='false'>
       <ion-header>
           <ion-toolbar>
-            <ion-title>Menu2</ion-title>
+            <ion-title>Menu</ion-title>
           </ion-toolbar>
         </ion-header>
       <ion-content>
