--- a/src/app/goals/goals.page.html
+++ b/src/app/goals/goals.page.html
@@ -33,19 +33,19 @@
 
       <div class="form-group">
         <label  floating text-wrap>My current frequency of physical activity is *</label>
-        <div class="form-check">
-          <input class="form-check-input" type="radio"  formControlName ="activity" id="inlineRadio1" value="NotRegular">
-          <label class="form-check-label" for="inlineRadio1">Not Regular- less than once a week</label>
+        <div class="custom-control custom-radio">
+          <input class="custom-control-input" type="radio"  formControlName ="activity" id="inlineRadio1" value="NotRegular">
+          <label class="custom-control-label" for="inlineRadio1">Not Regular- less than once a week</label>
         </div>
 
-        <div class="form-check">
-          <input class="form-check-input" type="radio"  formControlName ="activity" id="inlineRadio2" value="Somewhat regular">
-          <label class="form-check-label" for="inlineRadio2">Somewhat Regular-between one and three times a week.</label>
+        <div class="custom-control custom-radio">
+          <input class="custom-control-input" type="radio"  formControlName ="activity" id="inlineRadio2" value="Somewhat regular">
+          <label class="custom-control-label" for="inlineRadio2">Somewhat Regular-between one and three times a week.</label>
         </div>
 
-        <div class="form-check">
-          <input class="form-check-input" type="radio"  formControlName ="activity" id="inlineRadio3" value="Regular">
-          <label class="form-check-label" for="inlineRadio3">Regular-three or more times a week.</label>
+        <div class="custom-control custom-radio">
+          <input class="custom-control-input" type="radio"  formControlName ="activity" id="inlineRadio3" value="Regular">
+          <label class="custom-control-label" for="inlineRadio3">Regular-three or more times a week.</label>
         </div>
         <div class="validation-errors">
           <ng-container *ngFor="let validation of validation_messages.activity" >
