--- a/src/app/signupform/signupform.page.html
+++ b/src/app/signupform/signupform.page.html
@@ -73,15 +73,15 @@
           </div>
   
   
-          <!-- <div class="form-group"> -->
+          <div class="form-group">
               <label floating style="padding-right: 10%">Gender</label>
-              <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio"  formControlName ="gender" id="inlineRadio1" value="Male">
-                  <label class="form-check-label" for="inlineRadio1">Male</label>
+              <div class="custom-control custom-radio custom-control-inline">
+                  <input class="custom-control-input" type="radio"  formControlName ="gender" id="inlineRadio1" value="Male">
+                  <label class="custom-control-label" for="inlineRadio1">Male</label>
               </div>
-              <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio"  formControlName ="gender" id="inlineRadio2" value="Female">
-                  <label class="form-check-label" for="inlineRadio2">Female</label>
+              <div class="custom-control custom-radio custom-control-inline">
+                  <input class="custom-control-input" type="radio"  formControlName ="gender" id="inlineRadio2" value="Female">
+                  <label class="custom-control-label" for="inlineRadio2">Female</label>
               </div>
               <div class="validation-errors">
                   <ng-container *ngFor="let validation of validation_messages.gender" >
@@ -90,7 +90,7 @@
                   </div>
                   </ng-container>
           </div>
-          <!-- </div> -->
+          </div>
   
               
           <div class="form-group">
